--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,10 @@
-# Streamlit web app
 streamlit>=1.30.0
-
-# Image processing
 Pillow>=10.0.0
-
-# CrewAI agent framework
-crewai>=0.29.0
-
-# LangChain for RAG and LLM orchestration
+crewai==0.29.0
 langchain>=0.2.0
 langchain-community>=0.2.0
-
-# Qdrant vector database client
 qdrant-client>=1.7.0
-
-# Sentence Transformers for embeddings
 sentence-transformers>=2.5.1
-
-# HTTP requests
 requests>=2.31.0
-
-# For managing environment variables
 python-dotenv>=1.0.1
-
-# Logging (optional, for better debugging)
 loguru>=0.7.2
-
-# ChromaDB (required by CrewAI, even if not used directly)
-chromadb>=0.4.24
