--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit
-Pillow
-crewai
-langchain
-langchain-community
-qdrant-client
-sentence-transformers
-requests
-python-dotenv
-loguru
-chromadb
+streamlit>=1.30.0
+Pillow>=10.0.0
+
+langchain>=0.2.0
+langchain-community>=0.2.0
+
+qdrant-client>=1.7.0
+sentence-transformers>=2.5.1
+
+requests>=2.31.0
+python-dotenv>=1.0.1
+loguru>=0.7.2
